# gitlab-dashboard

./: Cargo.toml  LICENSE  README.md  config.toml.example
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  gitlab.rs  main.rs  paginator.rs  state.rs  tui.rs  ui.rs
src/components/: error_component.rs  footer_component.rs  header_component.rs  loading_component.rs  pipelines_viewer_component.rs  project_selector_component.rs  utils.rs
src/ui/: mod.rs  ui.rs
