[package]
name = "gitlab-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
futures = "0.3.31"
gitlab = "0.1705.0"
ratatui = "0.29.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8.19"
tracing = "0.1.41"
validator = { version = "0.19.0", features = ["derive"] }
